[maven-release-plugin] prepare release ffindex-java-0.1.0

--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.rcsb</groupId>
     <artifactId>ffindex-java</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <modules>
         <module>ffindex-java-benchmark</module>
         <module>ffindex-java-core</module>
@@ -34,7 +32,7 @@
         <connection>scm:git:git://github.com/rcsb/ffindex-java.git</connection>
         <developerConnection>scm:git:git@github.com:rcsb/ffindex-java.git</developerConnection>
         <url>https://github.com/rcsb/ffindex-java</url>
-        <tag>HEAD</tag>
+        <tag>ffindex-java-0.1.0</tag>
     </scm>
 
     <properties>
