--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,8 @@
         <project.build.targetEncoding>UTF-8</project.build.targetEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <sonar.organization>rcsb</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <build>
