--- a/ffindex-java-benchmark/pom.xml
+++ b/ffindex-java-benchmark/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>ffindex-java</artifactId>
         <groupId>org.rcsb</groupId>
-        <version>0.1.3-SNAPSHOT</version>
+        <version>0.2.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -13,7 +13,7 @@
         <dependency>
             <groupId>org.rcsb</groupId>
             <artifactId>ffindex-java-core</artifactId>
-            <version>0.1.3-SNAPSHOT</version>
+            <version>0.2.0</version>
         </dependency>
 
         <dependency>
