--- a/ffindex-java-core/pom.xml
+++ b/ffindex-java-core/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>ffindex-java</artifactId>
         <groupId>org.rcsb</groupId>
-        <version>0.1.3-SNAPSHOT</version>
+        <version>0.2.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
