--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.rcsb</groupId>
     <artifactId>ffindex-java</artifactId>
-    <version>0.1.3-SNAPSHOT</version>
+    <version>0.2.0</version>
     <modules>
         <module>ffindex-java-benchmark</module>
         <module>ffindex-java-core</module>
@@ -39,7 +39,7 @@
         <connection>scm:git:git://github.com/rcsb/ffindex-java.git</connection>
         <developerConnection>scm:git:git@github.com:rcsb/ffindex-java.git</developerConnection>
         <url>https://github.com/rcsb/ffindex-java</url>
-        <tag>HEAD</tag>
+        <tag>ffindex-java-0.2.0</tag>
     </scm>
 
     <properties>
